@@ -1,3 +1,8 @@
+gnome-tour 40.beta
+===================
+* Adapt the pages for GNOME Shell changes
+* Translations updates
+
 gnome-tour 3.37.91
 ===================
  * First release of GNOME Tour & Greater
